# wavelets

./: CMakeLists.txt  LICENSE  Makefile  README.md  wavebench  wavebench-old.cpp  wavebench.cpp  wavelet.hpp
examples/: parcrosscorrelation.cpp  testcuda.cu  wavebench.cpp  waveletdemo.cpp
include/catch2/: readme.txt  tests-main.cpp
include/stopwatch/: stopwatch.hpp
include/wavelib/: readme.txt  wavelet2s.cpp
src/: CrossCorrelation.hpp  archtypes.h  ccorrelationbase.h  crosscorrelation.cu  cudacheck.h  cudadevices.hpp  evector.hpp  utils.h  wavebench-old.cpp  wavebench.cpp  wavelet.hpp  wavelettransform.hpp
test/: tests.cpp
